# Eserciziario_C

./: gestioneArray.c
3E/: 06_progetto.c  07_stringa.c  08_classe.c  Principali comandi dos.docx  arraySomMed.c  es1Vett.c  es2Vett.c  es3Vett.c  es3_String.c  esGestString.docx  es_verificaKhaled.c  softwareLottoC_Gruppo2_3E.C  somma.c  stringPt2.c  variabili.c  vettori.c
4E/: system02_es_prof.paiola.c
4E/argc-argv/: barchi_4E_es1_argc-argv.c
4E/iterazione/: barchi_4E_es10_sommaPrimi.c  barchi_4E_es1_successivo.c  barchi_4E_es2_ordina.c  barchi_4E_es3_ordinaDispari.c  barchi_4E_es4_ordinaPari.c  barchi_4E_es5_intervallo.c  barchi_4E_es6_maggioreMinore.c  barchi_4E_es7_precedente.c  barchi_4E_es8_ordinaDecres.c  barchi_4E_es9_stampaIntervallo.c
4E/paiola/: 01_esProfPaiola.c  02_rw.c
4E/processi/: 01_processi.c  02_padrefiglio.c  03_conta.c  03_stringToupper.c  05_trovaNumero  05_trovaNumero.c  BarchiFilippo_FilaA.c  FilaB  FilaB.c
4E/programmazione di sistema/: 01_cat.c  02_wc.c  03_cercaParole.c  03_cercaStringhe.c  04_cercaStringhe.c
4E/system_call/: 01_es_prof-paiola.c  02_alfabeto  02_alfabeto.c  04_systemCall.c  05_occorrenze.c  06_write.c  esercizio.c
4E/testing/: CMakeLists.txt  calcolatrice.c  calcolatrice.h  comandi.txt  main_test.cpp
5E/: es02_gestioneStringhe.c  es04_struct2  es04_struct2.c
5E/socket/es01_Socket/: client.c  server.c
5E/socket/es02_Socket/: client.c  server.c
5E/socket/es03_SocketTaxi.c/: server.c
5E/socket/es04_MorraCinese/: client.c  server.c
5E/thread/: barchi_5E_18_10_2025.c  es03_struct.c
